--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="container-fluid">
                 <div class="row">
                 <div class="second-box col-lg-12">
-                    <span><i class="fa-brands fa-react fa-10x fa-spin-pulse"></i></span>
+                    <span><i class="fa-brands fa-react fa-10x fa-spin" style="--fa-animation-duration: 15s;"></i></span>
                     <h2>The Innovative Way To The Future</h2>
                     <p>Drive your way into your future to meet your demands and expectation which will lead ultimately to your happiness and satisfaction to your life and to the society.</p>
                 </div>
